{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "CameraControls",
            "id": "d82bf2e8-ae35-4849-8c7c-00e527a27bbb",
            "actions": [
                {
                    "name": "Camera Thumbstick",
                    "type": "Value",
                    "id": "efef3ced-bf4f-4996-bbf2-1156f77bf46e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Camera Mouse Input",
                    "type": "Button",
                    "id": "a64bd264-79ba-411d-882b-ae1cb1a8934e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e72ee119-5d9c-47ad-80d0-ebfa716e736b",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera Thumbstick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a4832785-0d42-432d-aed0-a89ce1f0b5de",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera Mouse Input",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Interact",
            "id": "83a4b3ac-9e3a-4c63-92cf-d56a259c5916",
            "actions": [
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "c2efffee-0f04-4e0b-a56e-c09d78e87866",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dd373f41-97ca-4601-b434-6f1d719f0525",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e66fafcb-156a-4491-9e9f-5561ba8ddb86",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CharacterMovement",
            "id": "4bf87acb-47c0-458d-a0e0-ba35bfdef775",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "09a96adc-a2dd-483f-b1b5-66c9e357df9f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "34d0abd8-a107-4419-9c44-f1436262209e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "82148c94-b792-44f9-9567-f9e23bb04837",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "282c303a-7c64-4c0d-b5fe-4991359fe69f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD Keyboard",
                    "id": "b22fab51-08e7-4c8b-9830-deb395899180",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "2adca8e6-418d-4b7e-803f-d1987115fb29",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "406c3b35-0728-4b01-af5e-dd121beef40a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "0d636609-5617-4fc4-87b0-c7dbff9e7561",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "301ac686-e695-4915-a3e1-8de6e7a976fa",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c903f595-4d48-49a0-9641-4b0dd7e00691",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "BoxMovement",
            "id": "2e08cb11-5f6e-4285-ac31-89cc6774cf6d",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "57d5937c-e305-4a9f-8fc2-eca903501b16",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD Keyboard",
                    "id": "fd3371d2-f2c9-4a0f-bb34-a074695d4525",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "753cd3e5-79f0-4abb-951c-100d610a70bf",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "5812460b-c1fb-43ee-9262-e41fabef7aa2",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "32a80ae8-b291-4711-88bc-4fbf133ef7fc",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "328d6b1e-c569-4414-ad03-eb57da5580e5",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "3d8c2c38-6edf-4ee7-ac0d-6dc8afbbfacd",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MenuInterraction",
            "id": "fd457262-b1d7-47cb-af93-d269b2deb86d",
            "actions": [],
            "bindings": []
        }
    ],
    "controlSchemes": []
}